# PairwiseNameComparator

./: .gitignore  MANIFEST.in  PairwiseNameComparator.pyx  compare_all_names.py  go.mod  main.go  parallel_dict_lookup.c  parallel_dict_lookup.pyx  pyproject.toml  setup.py  temp.py
.github/workflows/: build_wheels.yml
PairwiseNameComparator/: __init__.py  compare_all_names.py
PairwiseNameComparator/src/: convert_to_ipa.py  find_which.py  pattern_match.py  word_to_matches.py
data/: all_names.py  common_names.py  large_data_set.py  larger_data_set.py  largest_data_set.py  medium_data_set.py  small_data_set.py
src/: convert_to_ipa.py  find_which.py  pattern_match.py  word_to_matches.py
